Refactor imports for better type checking

--- a/WebS.ipynb
+++ b/WebS.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "from requests import get\n",
-    "import pandas as pd"
+    "from bs4 import BeautifulSoup # type: ignore\n",
+    "from requests import get # type: ignore\n",
+    "import pandas as pd # type: ignore"
    ]
   },
   {
